--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,14 @@ html{
     font-size: 62.5%;
     font-family: 'Josefin Sans', sans-serif;
 }
+header{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-width: 360px;
+    height: 334px;
+    text-align: center;
+    
+}
