--- a/styles.css
+++ b/styles.css
@@ -39,5 +39,24 @@ header{
     min-width: 360px;
     height: 334px;
     text-align: center;
+    background: ;
     
 }
+header img{
+    width: 150px;
+    height: 24px;
+    margin-top: 60px;
+    align-self: center;
+
+}
+.header--title-container{
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    height: 218px;
+    margin-top: 40px;
+    text-align: center;
+    align-self: center;
+
+}
+
